tests/suite/fail/regression/reg_string_sub.ny
fn main() {
    let s = "x"
    s - 1 //~ ERROR type mismatch in `subtraction` operation
}
